fix(api-gateway): make CORS origins configurable via environment variable
The CORS allowed origins were hardcoded to localhost only, causing 403 errors
on all POST/PUT/DELETE requests from the production domain.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>